syntax.output
State 8 conflicts: 1 reduce/reduce
State 70 conflicts: 3 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error
    8       | Specifier ExtDecList error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | %empty

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC

   27 StmtList: Stmt StmtList
   28         | %empty

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | Exp error
   36     | RETURN Exp error
   37     | error SEMI
   38     | error ELSE
   39     | error RETURN
   40     | error IF
   41     | error WHILE

   42 DefList: Def DefList
   43        | %empty

   44 Def: Specifier DecList SEMI

   45 DecList: Dec
   46        | Dec COMMA DecList

   47 Dec: VarDec
   48    | VarDec ASSIGNOP Exp

   49 Exp: Exp ASSIGNOP Exp
   50    | Exp AND Exp
   51    | Exp OR Exp
   52    | Exp RELOP Exp
   53    | Exp PLUS Exp
   54    | Exp MINUS Exp
   55    | Exp STAR Exp
   56    | Exp DIV Exp
   57    | Exp LB Exp RB
   58    | Exp DOT ID
   59    | LP Exp RP
   60    | MINUS Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | ID
   65    | INT
   66    | FLOAT
   67    | LB Exp error
   68    | error RP
   69    | error SEMI

   70 Args: Exp COMMA Args
   71     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 35 36 37 38 39 40 41 67 68 69
INT (258) 19 65
FLOAT (259) 66
ID (260) 15 17 18 20 21 58 62 63 64
ASSIGNOP (261) 48 49
OR (262) 51
AND (263) 50
RELOP (264) 52
PLUS (265) 53
MINUS (266) 54 60
STAR (267) 55
DIV (268) 56
NOT (269) 61
LP (270) 20 21 32 33 34 59 62 63
RP (271) 20 21 32 33 34 59 62 63 68
DOT (272) 58
LB (273) 19 57 67
RB (274) 19 57
LC (275) 13 26
RC (276) 13 26
TYPE (277) 11
STRUCT (278) 13 14
RETURN (279) 31 36 39
IF (280) 32 33 40
WHILE (281) 34 41
SEMI (282) 4 5 29 31 37 44 69
COMMA (283) 10 23 46 70
LOWER_THAN_ELSE (284)
ELSE (285) 33 38


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (35)
    on left: 9 10, on right: 4 8 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 7 8 25 44
StructSpecifier (37)
    on left: 13 14, on right: 12
OptTag (38)
    on left: 15 16, on right: 13
Tag (39)
    on left: 17, on right: 14
VarDec (40)
    on left: 18 19, on right: 9 10 19 25 47 48
FunDec (41)
    on left: 20 21 22, on right: 6
VarList (42)
    on left: 23 24, on right: 20 23
ParamDec (43)
    on left: 25, on right: 23 24
CompSt (44)
    on left: 26, on right: 6 30
StmtList (45)
    on left: 27 28, on right: 26 27
Stmt (46)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41, on right: 27 32
    33 34
DefList (47)
    on left: 42 43, on right: 13 26 42
Def (48)
    on left: 44, on right: 42
DecList (49)
    on left: 45 46, on right: 44 46
Dec (50)
    on left: 47 48, on right: 45 46
Exp (51)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69, on right: 29 31 32 33 34 35 36 48 49 50 51 52 53 54 55
    56 57 58 59 60 61 67 70 71
Args (52)
    on left: 70 71, on right: 62 70


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 2

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error
    8       | Specifier . ExtDecList error

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    LC  reduce using rule 22 (FunDec)

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    LC        [reduce using rule 17 (Tag)]
    $default  reduce using rule 17 (Tag)


State 9

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    7 ExtDef: Specifier error .

    $default  reduce using rule 7 (ExtDef)


State 14

   18 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 20

    $default  reduce using rule 18 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI
    8       | Specifier ExtDecList . error

    error  shift, and go to state 21
    SEMI   shift, and go to state 22


State 17

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 23
    COMMA  shift, and go to state 24

    $default  reduce using rule 9 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 19

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 28
    Def              go to state 29


State 20

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    RP      shift, and go to state 30
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 32
    ParamDec         go to state 33


State 21

    8 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 8 (ExtDef)


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 34


State 24

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 17


State 25

   26 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 37
    Def              go to state 29


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   44 Def: Specifier . DecList SEMI

    ID  shift, and go to state 35

    VarDec   go to state 38
    DecList  go to state 39
    Dec      go to state 40


State 28

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 41


State 29

   42 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 42
    Def              go to state 29


State 30

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 31

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  go to state 43


State 32

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 44


State 33

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 45

    $default  reduce using rule 24 (VarList)


State 34

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 46


State 35

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 36

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 37

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LB      shift, and go to state 54
    LC      shift, and go to state 25
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 58
    StmtList  go to state 59
    Stmt      go to state 60
    Exp       go to state 61


State 38

   19 VarDec: VarDec . LB INT RB
   47 Dec: VarDec .
   48    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 62
    LB        shift, and go to state 23

    $default  reduce using rule 47 (Dec)


State 39

   44 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 63


State 40

   45 DecList: Dec .
   46        | Dec . COMMA DecList

    COMMA  shift, and go to state 64

    $default  reduce using rule 45 (DecList)


State 41

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 42

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 43

   19 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 25 (ParamDec)


State 44

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 45

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 65
    ParamDec         go to state 33


State 46

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 47

   37 Stmt: error . SEMI
   38     | error . ELSE
   39     | error . RETURN
   40     | error . IF
   41     | error . WHILE
   68 Exp: error . RP
   69    | error . SEMI

    RP      shift, and go to state 66
    RETURN  shift, and go to state 67
    IF      shift, and go to state 68
    WHILE   shift, and go to state 69
    SEMI    shift, and go to state 70
    ELSE    shift, and go to state 71


State 48

   65 Exp: INT .

    $default  reduce using rule 65 (Exp)


State 49

   66 Exp: FLOAT .

    $default  reduce using rule 66 (Exp)


State 50

   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   64    | ID .

    LP  shift, and go to state 72

    $default  reduce using rule 64 (Exp)


State 51

   60 Exp: MINUS . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    LB     shift, and go to state 54

    Exp  go to state 74


State 52

   61 Exp: NOT . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    LB     shift, and go to state 54

    Exp  go to state 75


State 53

   59 Exp: LP . Exp RP

    error  shift, and go to state 73
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    LB     shift, and go to state 54

    Exp  go to state 76


State 54

   67 Exp: LB . Exp error

    error  shift, and go to state 73
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    LB     shift, and go to state 54

    Exp  go to state 77


State 55

   31 Stmt: RETURN . Exp SEMI
   36     | RETURN . Exp error

    error  shift, and go to state 73
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    LB     shift, and go to state 54

    Exp  go to state 78


State 56

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 79


State 57

   34 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 80


State 58

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


State 59

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 81


State 60

   27 StmtList: Stmt . StmtList

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LB      shift, and go to state 54
    LC      shift, and go to state 25
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 58
    StmtList  go to state 82
    Stmt      go to state 60
    Exp       go to state 61


State 61

   29 Stmt: Exp . SEMI
   35     | Exp . error
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    error     shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    OR        shift, and go to state 85
    AND       shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93
    SEMI      shift, and go to state 94


State 62

   48 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    LB     shift, and go to state 54

    Exp  go to state 95


State 63

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


State 64

   46 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    VarDec   go to state 38
    DecList  go to state 96
    Dec      go to state 40


State 65

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 66

   68 Exp: error RP .

    $default  reduce using rule 68 (Exp)


State 67

   39 Stmt: error RETURN .

    $default  reduce using rule 39 (Stmt)


State 68

   40 Stmt: error IF .

    $default  reduce using rule 40 (Stmt)


State 69

   41 Stmt: error WHILE .

    $default  reduce using rule 41 (Stmt)


State 70

   37 Stmt: error SEMI .
   69 Exp: error SEMI .

    error     reduce using rule 37 (Stmt)
    error     [reduce using rule 69 (Exp)]
    ASSIGNOP  reduce using rule 69 (Exp)
    OR        reduce using rule 69 (Exp)
    AND       reduce using rule 69 (Exp)
    RELOP     reduce using rule 69 (Exp)
    PLUS      reduce using rule 69 (Exp)
    MINUS     reduce using rule 37 (Stmt)
    MINUS     [reduce using rule 69 (Exp)]
    STAR      reduce using rule 69 (Exp)
    DIV       reduce using rule 69 (Exp)
    DOT       reduce using rule 69 (Exp)
    LB        reduce using rule 37 (Stmt)
    LB        [reduce using rule 69 (Exp)]
    SEMI      reduce using rule 69 (Exp)
    $default  reduce using rule 37 (Stmt)


State 71

   38 Stmt: error ELSE .

    $default  reduce using rule 38 (Stmt)


State 72

   62 Exp: ID LP . Args RP
   63    | ID LP . RP

    error  shift, and go to state 73
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    RP     shift, and go to state 97
    LB     shift, and go to state 54

    Exp   go to state 98
    Args  go to state 99


State 73

   68 Exp: error . RP
   69    | error . SEMI

    RP    shift, and go to state 66
    SEMI  shift, and go to state 100


State 74

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID
   60    | MINUS Exp .

    STAR  shift, and go to state 90
    DIV   shift, and go to state 91
    DOT   shift, and go to state 92
    LB    shift, and go to state 93

    $default  reduce using rule 60 (Exp)


State 75

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID
   61    | NOT Exp .

    DOT  shift, and go to state 92
    LB   shift, and go to state 93

    $default  reduce using rule 61 (Exp)


State 76

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID
   59    | LP Exp . RP

    ASSIGNOP  shift, and go to state 84
    OR        shift, and go to state 85
    AND       shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    RP        shift, and go to state 101
    DOT       shift, and go to state 92
    LB        shift, and go to state 93


State 77

   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID
   67    | LB Exp . error

    error     shift, and go to state 102
    ASSIGNOP  shift, and go to state 84
    OR        shift, and go to state 85
    AND       shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93


State 78

   31 Stmt: RETURN Exp . SEMI
   36     | RETURN Exp . error
   49 Exp: Exp . ASSIGNOP Exp
   50    | Exp . AND Exp
   51    | Exp . OR Exp
   52    | Exp . RELOP Exp
   53    | Exp . PLUS Exp
   54    | Exp . MINUS Exp
   55    | Exp . STAR Exp
   56    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    error     shift, and go to state 103
    ASSIGNOP  shift, and go to state 84
    OR        shift, and go to state 85
    AND       shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93
    SEMI      shift, and go to state 104


State 79

   32 Stmt: IF LP . Exp RP Stmt
   33     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 73
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    LB     shift, and go to state 54

    Exp  go to state 105


State 80

   34 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 73
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    LB     shift, and go to state 54

    Exp  go to state 106


State 81

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


State 82

   27 StmtList: Stmt StmtList .

    $default  reduce using rule 27 (StmtList)


State 83

   35 Stmt: Exp error .

    $default  reduce using rule 35 (Stmt)


State 84

   49 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    LB     shift, and go to state 54

    Exp  go to state 107


State 85

   51 Exp: Exp OR . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    LB     shift, and go to state 54

    Exp  go to state 108


State 86

   50 Exp: Exp AND . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    LB     shift, and go to state 54

    Exp  go to state 109


State 87

   52 Exp: Exp RELOP . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    LB     shift, and go to state 54

    Exp  go to state 110


State 88

   53 Exp: Exp PLUS . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    LB     shift, and go to state 54

    Exp  go to state 111


State 89

   54 Exp: Exp MINUS . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    LB     shift, and go to state 54

    Exp  go to state 112


State 90

   55 Exp: Exp STAR . Exp
